Добавлен параметр для узла, на котором запускается приложение для теста.