@@ -1,5 +1,6 @@
 package ru.web.equipment.integration;
 
+import org.openqa.selenium.Platform;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.firefox.FirefoxDriver;
@@ -13,7 +14,7 @@ import ru.web.equipment.integration.selenium.pages.WebApplication;
 import ru.web.equipment.integration.selenium.pages.WebPageFactory;
 import ru.web.equipment.utils.StringUtils;
 
-import java.net.URL;
+import java.net.URI;
 
 @Configuration
 @ComponentScan("ru.web.equipment.test.*")
@@ -29,19 +30,29 @@ public class WebDriverConfiguration {
 
 
     private WebDriver getDriver() throws Exception {
-        DesiredCapabilities remoteFirefox = DesiredCapabilities.firefox();
-        DesiredCapabilities remoteChrome = DesiredCapabilities.chrome();
+        DesiredCapabilities remoteFirefox = new DesiredCapabilities("firefox", "", Platform.LINUX);
+        remoteFirefox.setCapability("enableVNC", true);
+        remoteFirefox.setCapability("enableVideo", false);
+        DesiredCapabilities remoteChrome = new DesiredCapabilities("chrome", "", Platform.LINUX);
+        remoteChrome.setCapability("enableVNC", true);
+        remoteChrome.setCapability("enableVideo", false);
         String browser = System.getProperty(BROWSER_KEY);
         if (StringUtils.isBlank(browser)) {
             return new FirefoxDriver();
         }
         switch (browser) {
-            case "chrome" : return new ChromeDriver();
-            case "hub-chrome" : return new RemoteWebDriver(new URL(HUB_URL), remoteChrome);
-            case "firefox" : return new FirefoxDriver();
-            case "hub-firefox" : return new RemoteWebDriver(new URL(HUB_URL), remoteFirefox);
-            case "opera" : return new OperaDriver();
-            default: return new FirefoxDriver();
+            case "chrome":
+                return new ChromeDriver();
+            case "hub-chrome":
+                return new RemoteWebDriver(URI.create(HUB_URL).toURL(), remoteChrome);
+            case "firefox":
+                return new FirefoxDriver();
+            case "hub-firefox":
+                return new RemoteWebDriver(URI.create(HUB_URL).toURL(), remoteFirefox);
+            case "opera":
+                return new OperaDriver();
+            default:
+                return new FirefoxDriver();
         }
     }
 }
